# learn-the-linux-programming-interface

./: CMakeLists.txt
source/chapter_06/: cmd_args_demo.cpp  mem_segments_demo.cpp  pid_demo.cpp
source/chapter_11/: sysconf_demo.cpp
source/chapter_12/: proc_fds.cpp
source/chapter_19/: inotify_recursive.cpp
